[gd_scene load_steps=11 format=3 uid="uid://t38orsgxiq2u"]

[ext_resource type="Texture2D" uid="uid://bq4im540nk025" path="res://art/tile_0106.png" id="1_ak1sy"]
[ext_resource type="Script" path="res://scenes/StartGame/char_selector.gd" id="1_velno"]
[ext_resource type="Texture2D" uid="uid://dc7crere7e7ow" path="res://art/tile_0099.png" id="2_3cwb2"]
[ext_resource type="Texture2D" uid="uid://c2egx6fhfkmvt" path="res://art/muscle.png" id="2_tx7ou"]
[ext_resource type="Texture2D" uid="uid://pgj8vfpj6tc5" path="res://art/tile_0130.png" id="3_iswsx"]

[sub_resource type="Gradient" id="Gradient_kf2kj"]
offsets = PackedFloat32Array(0, 0.714597, 0.923747)
colors = PackedColorArray(0.376657, 0.208991, 0.024989, 1, 0.329955, 0.000779496, 0.163903, 1, 0.259882, 0.0902291, 0.252119, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_urcne"]
gradient = SubResource("Gradient_kf2kj")

[sub_resource type="LabelSettings" id="LabelSettings_h4qqe"]
font_size = 14
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o16kr"]
font_size = 12
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_nwuu5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_velno")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_urcne")

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 74.0
offset_right = 24.0
offset_bottom = 90.0
scale = Vector2(3, 3)
texture = ExtResource("2_3cwb2")
expand_mode = 1
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 6.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_constants/separation = -1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Title
"
label_settings = SubResource("LabelSettings_h4qqe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "These are some words and a lot of words
and another many wrods
"
label_settings = SubResource("LabelSettings_o16kr")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 75.0
offset_top = 79.0
offset_right = 195.0
offset_bottom = 121.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 12
alignment = 1

[node name="Warrior" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 42)
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_nwuu5")
text = "Warrior"
icon = ExtResource("1_ak1sy")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="Savage" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 42)
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_nwuu5")
text = "Savage"
icon = ExtResource("2_tx7ou")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="Wizard" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 42)
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_nwuu5")
text = "Wizard"
icon = ExtResource("3_iswsx")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 83.0
offset_right = 248.0
offset_bottom = 99.0
text = "Go!"

[connection signal="pressed" from="HBoxContainer/Warrior" to="." method="_on_warrior_pressed"]
[connection signal="pressed" from="HBoxContainer/Savage" to="." method="_on_savage_pressed"]
[connection signal="pressed" from="HBoxContainer/Wizard" to="." method="_on_wizard_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
